[gd_scene load_steps=2 format=3 uid="uid://c6mnkysrpypgd"]

[ext_resource type="Script" uid="uid://bd1v37g472s4u" path="res://GameManager.gd" id="1_p13vs"]

[node name="GameManager" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_p13vs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
clip_contents = true
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
alignment = 1

[node name="TextoPrincipal" type="RichTextLabel" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
bbcode_enabled = true
text = "Você está na aconchegante cabana, seu lar. Há uma porta de madeira ao norte e uma velha escrivaninha de carvalho a leste. O sol da manhã entra pela janela."

[node name="EntradaComando" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2

[node name="BotaoFalar" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clique em mim"
flat = true

[connection signal="text_submitted" from="VBoxContainer/EntradaComando" to="." method="processar_entrada"]
[connection signal="pressed" from="VBoxContainer/BotaoFalar" to="." method="iniciar_comando_voz"]
